--- a/app/src/main/res/layout/activity_main_2_1.xml
+++ b/app/src/main/res/layout/activity_main_2_1.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:paddingStart="10dp"
+        android:paddingStart="20dp"
         android:paddingLeft="10dp"
         android:paddingEnd="10dp"
         android:paddingRight="10dp"
@@ -23,7 +23,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="#000000" />
+        app:titleTextColor="#000000"
+        app:titleTextAppearance="@style/Toolbar.TitleText">
+
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/linear_body"
@@ -144,7 +147,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="true"
-                        app:srcCompat="@drawable/category_military_50"
+                        app:srcCompat="@drawable/category_military_512"
                         app:scale_height="60"
                         app:scale_left="45"
                         app:scale_top="55"
@@ -187,7 +190,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="true"
-                        app:srcCompat="@drawable/category_society_50"
+                        app:srcCompat="@drawable/category_social_512"
                         app:scale_height="60"
                         app:scale_left="45"
                         app:scale_top="55"
@@ -234,7 +237,7 @@
                         android:layout_height="wrap_content"
                         android:clickable="true"
                         android:text="정치"
-                        app:srcCompat="@drawable/category_politics_50"
+                        app:srcCompat="@drawable/category_politics_512"
                         app:scale_height="60"
                         app:scale_left="45"
                         app:scale_top="55"
@@ -302,7 +305,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="true"
-                        app:srcCompat="@drawable/category_it_50"
+                        app:srcCompat="@drawable/category_it_512"
                         app:scale_height="60"
                         app:scale_left="45"
                         app:scale_top="55"
@@ -344,7 +347,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="true"
-                        app:srcCompat="@drawable/category_military_50"
+                        app:srcCompat="@drawable/category_culture_512"
                         app:scale_height="60"
                         app:scale_left="45"
                         app:scale_top="55"
@@ -386,7 +389,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="true"
-                        app:srcCompat="@drawable/category_economy_50"
+                        app:srcCompat="@drawable/category_economy_512"
                         app:scale_height="60"
                         app:scale_left="45"
                         app:scale_top="55"
@@ -436,7 +439,7 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:text="단어퀴즈"
                     android:textColor="@color/darker_gray2"
                     android:textStyle="bold"
