--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -13,10 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_weight="0"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:paddingStart="10dp"
+        android:paddingStart="20dp"
         android:paddingLeft="10dp"
         android:paddingEnd="10dp"
         android:paddingRight="10dp"
@@ -25,7 +24,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="#000000" />
+        app:titleTextColor="#000000"
+        app:titleTextAppearance="@style/Toolbar.TitleText">
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <FrameLayout
@@ -53,9 +55,8 @@
                 android:id="@+id/userpic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/logo_100"
+                android:src="@drawable/user_img"
                 android:scaleType="fitCenter"
-                android:background="@drawable/aqua_background_round"
                 android:gravity="center"
                 app:scale_height="120"
                 app:scale_left="140"
@@ -68,8 +69,6 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:gravity="center"
-                android:background="@drawable/aqua_background_round"
-
                 android:text="username"
                 android:textColor="@color/black"
                 app:scale_height="40"
@@ -97,7 +96,7 @@
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:scale_base_height="120"
+            app:scale_base_height="150"
             app:scale_base_width="400">
 
             <com.ssomai.android.scalablelayout.ScalableLayout
@@ -105,9 +104,9 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/white_background_round"
                 android:elevation="5dp"
-                app:scale_base_height="110"
+                app:scale_base_height="140"
                 app:scale_base_width="390"
-                app:scale_height="110"
+                app:scale_height="140"
                 app:scale_left="5"
                 app:scale_top="5"
                 app:scale_width="390">
@@ -122,19 +121,19 @@
                     android:text="최근 푼 퀴즈"
                     android:textColor="@android:color/darker_gray"
                     app:scale_height="40"
-                    app:scale_left="10"
+                    app:scale_left="20"
                     app:scale_textsize="20"
-                    app:scale_top="5"
-                    app:scale_width="380" />
+                    app:scale_top="15"
+                    app:scale_width="350" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/darker_gray"
                     app:scale_height="2"
-                    app:scale_left="10"
-                    app:scale_top="54"
-                    app:scale_width="380" />
+                    app:scale_left="20"
+                    app:scale_top="69"
+                    app:scale_width="350" />
 
                 <TextView
                     android:id="@+id/darkmode"
@@ -145,21 +144,22 @@
                     android:text="다크모드"
                     android:textColor="@android:color/darker_gray"
                     app:scale_height="40"
-                    app:scale_left="10"
+                    app:scale_left="20"
                     app:scale_textsize="20"
-                    app:scale_top="65"
+                    app:scale_top="85"
                     app:scale_width="100" />
 
                 <Switch
                     android:id="@+id/darkmode_toggle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:track="@drawable/switch_track_selector"
+                    android:thumb="@drawable/switch_thumb"
                     android:checked="false"
                     android:clickable="true"
-                    android:switchMinWidth="60dp"
                     app:scale_height="40"
-                    app:scale_left="310"
-                    app:scale_top="65"
+                    app:scale_left="300"
+                    app:scale_top="85"
                     app:scale_width="70" />
 
             </com.ssomai.android.scalablelayout.ScalableLayout>
@@ -181,7 +181,7 @@
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:scale_base_height="60"
+            app:scale_base_height="80"
             app:scale_base_width="400">
 
             <com.ssomai.android.scalablelayout.ScalableLayout
@@ -189,9 +189,9 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/white_background_round"
                 android:elevation="5dp"
-                app:scale_base_height="50"
+                app:scale_base_height="70"
                 app:scale_base_width="390"
-                app:scale_height="50"
+                app:scale_height="70"
                 app:scale_left="5"
                 app:scale_top="5"
                 app:scale_width="390">
@@ -207,10 +207,10 @@
                     android:text="로그아웃"
                     android:textColor="@android:color/darker_gray"
                     app:scale_height="40"
-                    app:scale_left="10"
+                    app:scale_left="20"
                     app:scale_textsize="20"
-                    app:scale_top="5"
-                    app:scale_width="380" />
+                    app:scale_top="15"
+                    app:scale_width="350" />
             </com.ssomai.android.scalablelayout.ScalableLayout>
         </com.ssomai.android.scalablelayout.ScalableLayout>
     </FrameLayout>
