--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.ssomai.android.scalablelayout.ScalableLayout
-            android:id="@+id/scalableLayout"
+            android:id="@+id/scalableLayout_logo"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
@@ -106,7 +106,7 @@
             android:layout_height="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/scalableLayout"
+            app:layout_constraintTop_toBottomOf="@id/scalableLayout_logo"
             app:scale_base_height="280"
             app:scale_base_width="2120">
 
