--- a/app/src/main/res/menu/func_search.xml
+++ b/app/src/main/res/menu/func_search.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/app_bar_search"
-        android:icon="@drawable/search"
+        android:icon="@drawable/search_20"
         android:title="Search"
         app:showAsAction="always" />
 
