--- a/app/src/main/res/drawable/loginaround.xml
+++ b/app/src/main/res/drawable/loginaround.xml
@@ -3,14 +3,11 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#B0D8D7"/>
+            <corners
+                android:radius="30dp"
+                ></corners>
         </shape>
     </item>
 
-    <item
-        android:bottom="3dp">
-        <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-        </shape>
-    </item>
 
 </layer-list>
