--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary">
     <com.ssomai.android.scalablelayout.ScalableLayout
-        android:id="@+id/scalableLayout"
-        android:layout_width="wrap_content"
+        android:id="@+id/scalableLayout_startLogo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/aqua_darker"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:scale_base_height="1417"
-        app:scale_base_width="800">
+        app:layout_constraintTop_toTopOf="parent"
+        app:scale_base_height="500"
+        app:scale_base_width="400">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="308dp"
-            android:layout_height="348dp"
-            android:layout_marginTop="56dp"
-            app:scale_left="100"
-            app:scale_height="600"
-            app:scale_width="600"
-            app:scale_top="110"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            app:scale_height="260"
+            app:scale_left="5"
+            app:scale_top="180"
+            app:scale_width="390"
+            app:srcCompat="@drawable/logo_body" />
+    </com.ssomai.android.scalablelayout.ScalableLayout>
+    <com.ssomai.android.scalablelayout.ScalableLayout
+        android:id="@+id/scalableLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/aqua_darker"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scalableLayout_startLogo"
+        app:scale_base_height="300"
+        app:scale_base_width="400">
 
         <Button
             android:id="@+id/start_login_b"
@@ -37,11 +47,12 @@
             android:textColor="#B0D8D7"
             android:background="@drawable/start_sign"
             android:backgroundTint="@color/white"
-            app:scale_textsize="38"
-            app:scale_top="900"
-            app:scale_left="45"
-            app:scale_height="100"
-            app:scale_width="700"/>
+            app:scale_height="50"
+            app:scale_left="50"
+            app:scale_textsize="20"
+            app:scale_top="100"
+            app:scale_width="300"/>
+
 
 
         <Button
@@ -51,10 +62,10 @@
             android:text="SIGN UP"
             android:textColor="@color/white"
             android:background="@drawable/start_sign"
-            app:scale_textsize="38"
-            app:scale_top="1030"
-            app:scale_left="45"
-            app:scale_height="100"
-            app:scale_width="700"/>
+            app:scale_height="50"
+            app:scale_left="50"
+            app:scale_textsize="20"
+            app:scale_top="170"
+            app:scale_width="300"/>
     </com.ssomai.android.scalablelayout.ScalableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
